--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "react": "^19.2.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.2.0",
